# invoice_parser_step-by-step

./: .gitignore  CLAUDE.md  README.md  TEST-REPORT.md  TESTING-PLAN.md  test-db-1.py  test_all_steps.py
.claude-project-management/: PRODUCTION-TESTING-INSIGHTS.md  PROJECT-README.md  TEACHING-CONTEXT.yaml  TEACHING-PLAN.md  (+1 more)
invoice_parser-main/: .env.backup  .gitignore  TEST_REPORT.md  pyproject.toml
invoice_parser-main/app/: __init__.py
invoice_parser-main/app/api/routes/: analytics.py  auth.py  dashboard.py  files.py  health.py  invoices.py  static_files.py  websocket.py
invoice_parser-main/app/core/: __init__.py  ai_processor.py  config.py  database.py  exceptions.py  logging_config.py  versioning.py
invoice_parser-main/app/models/: __init__.py  api_responses.py  schemas.py
invoice_parser-main/app/services/: __init__.py  auth_service.py  file_service.py  invoice_service.py
invoice_parser-main/frontend/public/: manifest.json
invoice_parser-main/frontend/src/: index.css
invoice_parser-main/frontend/src/components/dashboard/: InvoicePreviewModal.jsx  InvoiceTable.jsx  StatsCards.jsx
invoice_parser-main/frontend/src/components/forms/: LoginModal.jsx
invoice_parser-main/frontend/src/components/layout/: Navbar.jsx
invoice_parser-main/frontend/src/components/processing/: ResultsPanel.jsx
invoice_parser-main/frontend/src/components/ui/: ErrorBoundary.jsx  Input.jsx
invoice_parser-main/frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
invoice_parser-main/frontend/src/hooks/: useLocalStorage.js
invoice_parser-main/uploads/: README.md
(+126 files in other folders)
